# beyondgen

./: .funcignore  .gitignore  Makefile  README.md  docker-compose.yaml  function_app.py  local.settings.json  pyproject.toml  requirements.txt  your-script.sh
.github/workflows/: main.yml  main_beyondgen-function-app.yml
wilkins/: logging.conf  main.py  matching.py  project.py
wilkins/data/: template.pptx
wilkins/tools/: azure.py
wilkins/utils/: auth.py  database.py  dropbox.py  epitch.py  excel.py  gdrive.py  images.py  msg.py  pdf.py  ppt.py  vision.py
